# llmjudge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: release.yml
examples/: custom_rubric.py  groundedness.py  quickstart.py
examples/integrations/: README.md  dspy_integration.py  langchain_integration.py  llamaindex_integration.py  raw_pipeline.py
src/llm_judge_kit/: __init__.py  _version.py  reporting.py
src/llmjudge/: __init__.py  errors.py  judge.py  parsing.py  types.py
src/llmjudge/providers/: __init__.py  anthropic.py  base.py  mock.py  ollama.py  openai.py  registry.py
src/llmjudge/rubrics/: __init__.py  base.py  builtin.py
tests/: test_cli.py  test_examples.py  test_judge.py  test_live_providers.py  test_mock.py  test_parsing.py  test_providers_registry.py  test_public_api.py  test_real_providers.py  test_reporting.py  test_rubrics.py  test_types.py
