[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmjudge"
version = "0.1.0"
description = "Provider-agnostic, reproducible, typed LLM-as-a-judge — a small primitive you can depend on."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "LLMJudge contributors" }]
keywords = ["llm", "evaluation", "llm-as-a-judge", "eval", "testing", "rubric"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
# The core "wedge" has ZERO required runtime dependencies on purpose: it must be
# trivial for any downstream project to add `llmjudge` without dragging in a
# transitive dependency tree. Real providers live behind optional extras (M2).
dependencies = []

[project.urls]
Homepage = "https://github.com/Nikolay26ru/llmjudge"
Repository = "https://github.com/Nikolay26ru/llmjudge"
Changelog = "https://github.com/Nikolay26ru/llmjudge/blob/main/CHANGELOG.md"

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
# ollama talks plain HTTP; httpx keeps it dependency-light and async-ready.
ollama = ["httpx>=0.27"]
all = ["openai>=1.0", "anthropic>=0.40", "httpx>=0.27"]

[dependency-groups]
dev = [
    "ruff>=0.10",
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llmjudge"]

[tool.hatch.build.targets.sdist]
include = ["src/llmjudge", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "D",    # pydocstyle
]
ignore = [
    "D105",  # missing docstring in magic method
    "D107",  # missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]      # tests don't need docstrings
"examples/*" = ["D"]   # examples are self-documenting

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
enable_error_code = ["redundant-expr", "truthy-bool", "ignore-without-code"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["llmjudge"]

[tool.coverage.report]
show_missing = true
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
